tests/fail/semantic/redefined_atom.cyt
atom Test

atom Test(a: int)

// args: --no-colour

// expected stderr:
// error: redefined item `Test`
//   ┌─ ../tests/fail/semantic/redefined_atom.cyt:3:6
//   │
// 1 │ atom Test
//   │      ---- first definition of item `Test` here
// 2 │ 
// 3 │ atom Test(a: int)
//   │      ^^^^ redefined item `Test` here